# casper-bank-contract

./: .gitignore  Makefile  README.md  call.sh  deploy.sh  deposit.sh  query.sh  withdraw.sh
client/: Cargo.toml
client/src/: deposit.rs
contract/src/: main.rs
multisig/: Makefile
multisig/client/: Cargo.toml
multisig/client/src/: deposit.rs  main.rs  withdraw.rs
multisig/contract/src/: main.rs
