[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "deposit"
path = "src/deposit.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "withdraw"
path = "src/withdraw.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
